# error_correction

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMMIT_RULES.md  LOCAL_DEV_START.md  PR.md  README.md  TODO.md  WEB_APP_GUIDE.md  agent.py  langgraph.json  openapi.json  project_rules.md  pyproject.toml  rag-development-plan.md  reindex_all.py  requirements.txt  web_app.py  前端开发规范.md  错题本生成流程.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
backend/: .env.example  check_pg.py  config.py  langgraph.json  llm.py  postgresql_schema.sql  web_app.py
backend/benchmark/: README.md  __init__.py  collect.py  evaluate.py  recall.py
backend/core/: config.py  llm.py  mail.py  model_selection.py  quota.py  rag.py  reasoning.py  state.py  workflow_run_store.py
backend/db/: __init__.py  crud.py  migrate.py  models.py
backend/error_correction_agent/: agent.py  prompts.py  schemas.py
backend/models/: config.py  config.yaml  inference.py  model.py  test_erase.py  train.py
backend/pipeline/: paddleocr_client.py  utils.py  workflow.py
backend/routes/: __init__.py  auth.py  chat.py  device.py  notes.py  projects.py  questions.py  settings.py  stats.py  (+1 more)
docs/: HANDWRITTEN_API.md  INDEX.md  PROJECT_STRUCTURE.md  current-architecture.md  openapi.json
error_correction_agent/: agent.py  prompts.py
frontend/: LINEAR_DESIGN.md  app.html  index.html  jsconfig.json  package.json  tailwind.config.js  vite.config.js
rules/: 项目规则索引.md
src/: paddleocr_client.py  utils.py  workflow.py
static/: app.js
templates/: index.html
(+447 files in other folders)
